--- a/inst/tutorials/AppendixC-1-Tutorial/AppendixC-1-Tutorial.Rmd
+++ b/inst/tutorials/AppendixC-1-Tutorial/AppendixC-1-Tutorial.Rmd
@@ -88,31 +88,6 @@ plot(EsTilde - 1, type = 'l', xlab = "Sample Size", ylab = "Bias")
 lines(EsBar - 1, type = 'l')
 ```
 
-```{r biasSimulation-solution}
-set.seed(8675309)
-xBar <- matrix(NA, nrow = 100000, ncol = 100)
-sBar <- matrix(NA, nrow = 100000, ncol = 100)
-EsBar <- NULL
-sTilde <- matrix(NA, nrow = 100000, ncol = 100)
-EsTilde <- NULL
-for(i in 1:30) {
-    for(j in 1:100000) {                     # Taking 100,000 resamples!
-        x <- rnorm(n = i)
-        xBar[j, i] = mean(x)
-        sBar[j, i] = sd(x)
-        sTilde[j, i] = mean((x-xBar[j,i])^2)
-    }
-  EsBar[i] <- mean(sBar[,i])
-  EsTilde[i] <- mean(sTilde[,i])
-}
-plot(EsTilde - 1, type = 'l', xlab = "Sample Size", ylab = "Bias")
-lines(EsBar - 1)
-```
-
-```{r biasSimulation-check}
-grade_code()
-```
-
 Showing that dividing by $n-1$ instead of $n$ eliminates this bias involves a similar trick: 
 
 $$E(s^2) = E[\frac{1}{n-1}\sum_{i=1}^{n}((X_i-\mu)^2-(\bar{X}-\mu)^2)]$$
@@ -189,11 +164,21 @@ xBar <- NULL
 for(i in 1:1000) {
   xBar[i] = mean(rpois(n = i, lambda = 1))
 }
-plot((xBar-1)^2, type = 'l')
+xBar <- data.frame(n = 1:length(xBar), xBar = xBar)
+ggplot(data = xBar) +
+  geom_line(aes(n, (xBar-1)^2)) + 
+  geom_hline(yintercept = 0, color = 'red') + 
+  ylab(expression((bar(x)-\mu)^2)) + 
+  xlab("Sample Size")
 ```
 
 ```{r LLN-check}
-grade_code()
+grade_this({if (!inherits(.result, c("gg", "ggplot"))) {
+    fail("Your class of your answer should be c('gg', 'ggplot').")}
+  if (length(.result) != 9) { 
+    fail("Your table should have a length of 9.") }
+  pass()
+})
 ```
 
 ## Distribution of a Sample Estimator
@@ -217,11 +202,12 @@ A "sufficiently large $n$" for the sample mean is usually about 30; in more comp
 Let *X* be a random variable that follows a Poisson distribution with parameter $\lambda = 1$. 
 
 1. Create a matrix of distributions where each column represents 1000 simulations of the sample mean of a Poisson distribution of sizes $n = {1, 2, ..., 100}$. (The first column consists of 1000 sample means with $n = 1$; the second consists of 1000 sample means with $n = 2$, and so on...)
-2. Use plot(density()) lot the smoothed estimated densities of xBar for n = 2, 10, 30, and 100, set the x-axis limits to (-1, 3) and the y-axis limits to (0, 4).
+2. Use plot(density()) lot the smoothed estimated densities of xBar for n = 2, 10, 30, and 100, set the x-axis limits to (-1, 3).
 
-```{r CLT, exercise=TRUE, exercise.eval=TRUE}
+```{r CLT, exercise=TRUE, exercise.eval=TRUE, warning=FALSE, message =FALSE}
 set.seed(8675309)
-xBar <- matrix(NA, nrow = 1000, ncol = 100) 
+xBar <- matrix(NA, nrow = 1000, ncol = 100) |> 
+  as.data.frame()
 
 
 
@@ -229,29 +215,40 @@ xBar <- matrix(NA, nrow = 1000, ncol = 100)
 
 ```{r CLT-hint}
 set.seed(8675309)
-xBar <- matrix(NA, nrow = 1000, ncol = 100) 
+xBar <- matrix(NA, nrow = 1000, ncol = 100) |> 
+  as.data.frame()
 # Start a "for loop" over i equal to all of the different sample sizes.
 # Start *another* "for loop" over j equal to the current resample of the population for the current "ith" sample size. 
 # Set the "jth" row of the current "ith" column of `xBar` equal to the mean of the current iteration of the sample mean with size i. 
-# Use plot(density()) and lines(density()) to plot all of the empirical densities.  
+# Use ggplot() + geom_density(xBar[,j]) to plot the empirical density of column j.  
 ```
 
-```{r CLT-solution}
+```{r CLT-solution, warning=FALSE, message =FALSE}
 set.seed(8675309)
-xBar <- matrix(NA, nrow = 1000, ncol = 100)
+xBar <- matrix(NA, nrow = 1000, ncol = 100) |> 
+  as.data.frame()
 for(i in 1:100) {
   for(j in 1:1000) {
     xBar[j, i] = mean(rpois(n = i, lambda = 1))
   }
 }
-plot(density(xBar[,2]), xlim = c(-1, 3), ylim = c(0, 4))
-lines(density(xBar[,15]))
-lines(density(xBar[,30]))
-lines(density(xBar[,100]))
+ggplot() + 
+  geom_density(aes(xBar[,2]), ) +
+  geom_density(aes(xBar[,10])) + 
+  geom_density(aes(xBar[,30])) + 
+  geom_density(aes(xBar[,100])) +
+  xlab(expression(bar(x))) + 
+  ylab("Density") +
+  xlim(-1, 3)
 ```
 
 ```{r CLT-check}
-grade_code()
+grade_this({if (!inherits(.result, c("gg", "ggplot"))) {
+    fail("Your class of your answer should be c('gg', 'ggplot').")}
+  if (length(.result) != 9) { 
+    fail("Your table should have a length of 9.") }
+  pass()
+})
 ```
 
 ## Using LLN and CLT
